--- a/src/main/resources/assets/bandw/lang/en_us.json
+++ b/src/main/resources/assets/bandw/lang/en_us.json
@@ -8,5 +8,6 @@
     "item.bandw.light_bricks": "Light Bricks",
     "item.bandw.dark_log": "Dark Log",
     "item.bandw.dark_bark": "Dark Bark",
-    "item.bandw.light_chiseled_bricks": "Light Chiseled Bricks"
+    "item.bandw.light_chiseled_bricks": "Light Chiseled Bricks",
+    "item.bandw.light_planks": "Light Planks"
 }  
