update language file

--- a/src/main/resources/assets/bandw/lang/en_us.json
+++ b/src/main/resources/assets/bandw/lang/en_us.json
@@ -4,10 +4,13 @@
     "block.bandw.dark_log": "Dark Log",
     "block.bandw.dark_bark": "Dark Bark",
     "block.bandw.light_chiseled_bricks": "Light Chiseled Bricks",
+    "block.bandw.light_planks": "Light Planks",
+    "block.bandw.shield_of_light": "Shield of Light",
     "item.bandw.dark_bricks": "Dark Bricks",
     "item.bandw.light_bricks": "Light Bricks",
     "item.bandw.dark_log": "Dark Log",
     "item.bandw.dark_bark": "Dark Bark",
     "item.bandw.light_chiseled_bricks": "Light Chiseled Bricks",
-    "item.bandw.light_planks": "Light Planks"
-}  
+    "item.bandw.light_planks": "Light Planks",
+    "item.bandw.shield_of_light": "Shield of Light"
+}
