--- a/src/main/resources/assets/bandw/lang/en_us.json
+++ b/src/main/resources/assets/bandw/lang/en_us.json
@@ -12,5 +12,8 @@
     "item.bandw.dark_bark": "Dark Bark",
     "item.bandw.light_chiseled_bricks": "Light Chiseled Bricks",
     "item.bandw.light_planks": "Light Planks",
-    "item.bandw.shield_of_light": "Shield of Light"
+    "item.bandw.shield_of_light": "Shield of Light",
+    "item.bandw.corruption_potion": "Potion of Corruption",
+    "item.bandw.corruption_potion.desc": "Upon consumpion, the corruption grows..",
+    "effect.bandw.corruption": "Corruption"
 }
